Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17696

Kernel 6.8 client LBUG: (dcache.c:136:ll_ddelete()) ASSERTION( d_count(de) == 1 ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.16.0, Lustre 2.15.6
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      After applying patch series https://review.whamcloud.com/54229 on master branch, Lustre client build passed with kernel 6.8.0-060800-generic. However, after mounting the filesystem, touching a file hit the following LBUG:

      LustreError: 12066:0:(dcache.c:136:ll_ddelete()) ASSERTION( d_count(de) == 1 ) failed:
      LustreError: 12066:0:(dcache.c:136:ll_ddelete()) LBUG
      CPU: 0 PID: 12066 Comm: lfs Tainted: G           OE      6.8.0-060800-generic #202403131158
      Hardware name: innotek GmbH VirtualBox/VirtualBox, BIOS VirtualBox 12/01/2006
      Call Trace:
       <TASK>
       dump_stack_lvl+0x48/0x70
       dump_stack+0x10/0x20
       lbug_with_loc+0x3e/0x70 [libcfs]
       ll_ddelete+0x278/0x280 [lustre]
       dput+0x174/0x1b0
       step_into+0x2f1/0x390
       walk_component+0x51/0x190
       path_lookupat+0x6a/0x1b0
       filename_lookup+0xe4/0x200
       vfs_statx+0x95/0x1d0
       do_statx+0x64/0xb0
       __x64_sys_statx+0x67/0x90
       do_syscall_64+0x85/0x180
       ? irqentry_exit+0x43/0x50
       ? exc_page_fault+0x94/0x1b0
       entry_SYSCALL_64_after_hwframe+0x6e/0x76
      RIP: 0033:0x7eeaf551ac6e
      Code: 31 0e 00 ba ff ff ff ff 64 c7 00 16 00 00 00 e9 a5 fd ff ff e8 d3 e2 01 00 0f 1f 00 f3 0f 1e fa 41 89 ca b8 4c 01 00 00 0f 05 <48> 3d 00 f0 ff ff 77 2a 89 c1 85 c0 74 0f 48 8b 05 75 31 0e 00 64 
      RSP: 002b:00007ffdade73a08 EFLAGS: 00000202 ORIG_RAX: 000000000000014c
      RAX: ffffffffffffffda RBX: 00007ffdade73b38 RCX: 00007eeaf551ac6e
      RDX: 0000000000000000 RSI: 00007ffdade7a1d8 RDI: 00000000ffffff9c
      RBP: 00007ffdade7a1d8 R08: 00007ffdade73a10 R09: 0000000000000001
      R10: 0000000000000000 R11: 0000000000000202 R12: 00007ffdade74b90
      R13: 00007ffdade73b38 R14: 0000000000000000 R15: 0000000000000001
       </TASK>
      Kernel panic - not syncing: LBUG
      CPU: 0 PID: 12066 Comm: lfs Tainted: G           OE      6.8.0-060800-generic #202403131158
      Hardware name: innotek GmbH VirtualBox/VirtualBox, BIOS VirtualBox 12/01/2006
      Call Trace:
       <TASK>
       dump_stack_lvl+0x48/0x70
       dump_stack+0x10/0x20
       panic+0x35f/0x3c0
       lbug_with_loc+0x70/0x70 [libcfs]
       ll_ddelete+0x278/0x280 [lustre]
       dput+0x174/0x1b0
       step_into+0x2f1/0x390
       walk_component+0x51/0x190
       path_lookupat+0x6a/0x1b0
       filename_lookup+0xe4/0x200
       vfs_statx+0x95/0x1d0
       do_statx+0x64/0xb0
       __x64_sys_statx+0x67/0x90
       do_syscall_64+0x85/0x180
       ? irqentry_exit+0x43/0x50
       ? exc_page_fault+0x94/0x1b0
       entry_SYSCALL_64_after_hwframe+0x6e/0x76
      RIP: 0033:0x7eeaf551ac6e
      Code: 31 0e 00 ba ff ff ff ff 64 c7 00 16 00 00 00 e9 a5 fd ff ff e8 d3 e2 01 00 0f 1f 00 f3 0f 1e fa 41 89 ca b8 4c 01 00 00 0f 05 <48> 3d 00 f0 ff ff 77 2a 89 c1 85 c0 74 0f 48 8b 05 75 31 0e 00 64
      RSP: 002b:00007ffdade73a08 EFLAGS: 00000202 ORIG_RAX: 000000000000014c
      RAX: ffffffffffffffda RBX: 00007ffdade73b38 RCX: 00007eeaf551ac6e
      RDX: 0000000000000000 RSI: 00007ffdade7a1d8 RDI: 00000000ffffff9c
      RBP: 00007ffdade7a1d8 R08: 00007ffdade73a10 R09: 0000000000000001
      R10: 0000000000000000 R11: 0000000000000202 R12: 00007ffdade74b90
      R13: 00007ffdade73b38 R14: 0000000000000000 R15: 0000000000000001
       </TASK>
      Kernel Offset: 0x2a200000 from 0xffffffff81000000 (relocation range: 0xffffffff80000000-0xffffffffbfffffff)
      ---[ end Kernel panic - not syncing: LBUG ]---
      

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: